<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tarotgamecounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/taker"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/taker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/Start_Value"
                android:textColor="#000000"
                android:textSize="48sp" />

            <Button
                android:id="@+id/boutsButtonTaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="boutsButtonHitTaker"
                android:text="@string/bout" />

            <Button
                android:id="@+id/kingsButtonTaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="kingsButtonHitTaker"
                android:text="@string/king" />

            <Button
                android:id="@+id/queensButtonTaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="queensButtonHitTaker"
                android:text="@string/queen" />

            <Button
                android:id="@+id/knightsButtonTaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="knightsButtonHitTaker"
                android:text="@string/knight" />

            <Button
                android:id="@+id/jacksButtonTaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="jacksButtonHitTaker"
                android:text="@string/jack" />

            <Button
                android:id="@+id/cardsButtonTaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="cardsButtonHitTaker"
                android:text="@string/card" />

            <Button
                android:id="@+id/petitAuBoutButtonTaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="petitAuBoutHitTaker"
                android:text="@string/petit_au_bout" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/defenders"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/defenders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/Start_Value"
                android:textColor="#000000"
                android:textSize="48sp" />

            <Button
                android:id="@+id/boutsButtonDefenders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="boutsButtonHitDefenders"
                android:text="@string/bout" />

            <Button
                android:id="@+id/kingsButtonDefenders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="kingsButtonHitDefenders"
                android:text="@string/king" />

            <Button
                android:id="@+id/queensButtonDefenders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="queensButtonHitDefenders"
                android:text="@string/queen" />

            <Button
                android:id="@+id/knightsButtonDefenders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="knightsButtonHitDefenders"
                android:text="@string/knight" />

            <Button
                android:id="@+id/jacksButtonDefenders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="jacksButtonHitDefenders"
                android:text="@string/jack" />

            <Button
                android:id="@+id/cardsButtonDefenders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="cardsButtonHitDefenders"
                android:text="@string/card" />

            <Button
                android:id="@+id/petitAuBoutButtonDefenders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="petitAuBoutHitDefenders"
                android:text="@string/petit_au_bout" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:onClick="resetScore"
        android:text="@string/reset" />

</RelativeLayout>
